Bug 73757 - [swrast] SIGSEGV swrast/s_renderbuffer.c:559
Summary: [swrast] SIGSEGV swrast/s_renderbuffer.c:559
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-18 02:45 UTC by Vinson Lee
Modified: 2014-01-20 16:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-01-18 02:45:50 UTC
mesa: 1c5e2965a0de296240dd8f5af12482164416b7f1 (master)

Run piglit fbo-drawbuffers-none glColorMaskIndexed on swrast.

$ ./bin/fbo-drawbuffers-none glColorMaskIndexed -auto
Testing glColorMaskIndexed.
Probe color at (0,0)
  Expected: 1.000000 1.000000 0.200000 1.000000
  Observed: 0.200000 0.200000 0.200000 0.200000
  from color attachment 0,
  config (COLOR_ATTACHMENT3, COLOR_ATTACHMENT2, COLOR_ATTACHMENT1, COLOR_ATTACHMENT0)
Probe color at (0,0)
  Expected: 0.200000 0.200000 1.000000 1.000000
  Observed: 0.200000 0.200000 0.200000 0.200000
  from color attachment 1 [details] [review],
  config (COLOR_ATTACHMENT3, COLOR_ATTACHMENT2, COLOR_ATTACHMENT1, COLOR_ATTACHMENT0)
Probe color at (0,0)
  Expected: 0.200000 1.000000 0.000000 0.200000
  Observed: 0.200000 0.000000 0.200000 0.200000
  from color attachment 2 [details] [review],
  config (COLOR_ATTACHMENT3, COLOR_ATTACHMENT2, COLOR_ATTACHMENT1, COLOR_ATTACHMENT0)
Segmentation fault (core dumped)


Program terminated with signal 11, Segmentation fault.
#0  0x00007f45d2d61118 in map_attachment (ctx=0x7f45d7382010, fb=0x1fb3d00, buffer=4294967295) at swrast/s_renderbuffer.c:559
559	   struct gl_texture_object *texObj = fb->Attachment[buffer].Texture;
(gdb) bt
#0  0x00007f45d2d61118 in map_attachment (ctx=0x7f45d7382010, fb=0x1fb3d00, buffer=4294967295) at swrast/s_renderbuffer.c:559
#1  0x00007f45d2d6155c in _swrast_map_renderbuffers (ctx=0x7f45d7382010) at swrast/s_renderbuffer.c:662
#2  0x00007f45d2d5146e in _swrast_span_render_start (ctx=0x7f45d7382010) at swrast/s_context.c:877
#3  0x00007f45d2d514ce in _swrast_render_start (ctx=0x7f45d7382010) at swrast/s_context.c:895
#4  0x00007f45d2da0cbd in _swsetup_RenderStart (ctx=0x7f45d7382010) at swrast_setup/ss_context.c:202
#5  0x00007f45d2d29725 in run_render (ctx=0x7f45d7382010, stage=0x1dd4b70) at tnl/t_vb_render.c:276
#6  0x00007f45d2d15b5b in _tnl_run_pipeline (ctx=0x7f45d7382010) at tnl/t_pipeline.c:163
#7  0x00007f45d2d1766d in _tnl_draw_prims (ctx=0x7f45d7382010, arrays=0x1dc1bb0, prim=0x7fffe431efa0, nr_prims=1, ib=0x0, min_index=0, max_index=3)
    at tnl/t_draw.c:526
#8  0x00007f45d2d172bf in _tnl_vbo_draw_prims (ctx=0x7f45d7382010, prim=0x7fffe431efa0, nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', min_index=0, 
    max_index=3, tfb_vertcount=0x0, indirect=0x0) at tnl/t_draw.c:426
#9  0x00007f45d2cec5c4 in vbo_draw_arrays (ctx=0x7f45d7382010, mode=5, start=0, count=4, numInstances=1, baseInstance=0) at vbo/vbo_exec_array.c:661
#10 0x00007f45d2ced00f in vbo_exec_DrawArrays (mode=5, start=0, count=4) at vbo/vbo_exec_array.c:813
#11 0x00007f45d6f069d7 in piglit_draw_rect_from_arrays (verts=0x7fffe431f070, tex=0x0) at piglit/tests/util/piglit-util-gl-common.c:632
#12 0x00007f45d6f06d4f in piglit_draw_rect (x=-1, y=-1, w=2, h=2) at piglit/tests/util/piglit-util-gl-common.c:741
#13 0x0000000000401c3f in test_glColorMaskIndexed (drawbufs=0x402510 <drawbuf_config+16>)
    at piglit/tests/spec/arb_framebuffer_object/fbo-drawbuffers-none.c:294
#14 0x0000000000402204 in piglit_init (argc=2, argv=0x7fffe431f2c8)
    at piglit/tests/spec/arb_framebuffer_object/fbo-drawbuffers-none.c:431
#15 0x00007f45d6f098fa in run_test (gl_fw=0x7f45d71f7340 <glut_fw>, argc=2, argv=0x7fffe431f2c8)
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:140
#16 0x00007f45d6f076c9 in piglit_gl_test_run (argc=2, argv=0x7fffe431f2c8, config=0x7fffe431f190)
    at piglit/tests/util/piglit-framework-gl.c:191
#17 0x0000000000401630 in main (argc=2, argv=0x7fffe431f2c8) at piglit/tests/spec/arb_framebuffer_object/fbo-drawbuffers-none.c:50
(gdb) frame 0
#0  0x00007f45d2d61118 in map_attachment (ctx=0x7f45d7382010, fb=0x1fb3d00, buffer=4294967295) at swrast/s_renderbuffer.c:559
559	   struct gl_texture_object *texObj = fb->Attachment[buffer].Texture;
(gdb) print /x buffer
$1 = 0xffffffff
Comment 1 Brian Paul 2014-01-20 16:20:03 UTC
Crash fixed with 799abb271a248f646faa5cc859968f8c71e1ef16.  Note, the test still doesn't pass though.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.